--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "docx": "^9.5.1",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
