--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "fast-xml-parser": "^5.3.1",
+    "jszip": "^3.10.1",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
     "openai": "^6.2.0",
     "pdf-parse": "^1.1.1"
   }
-  
 }
